# pubsub-pretty-logger

./: .env.example  .flake8  .gitignore  LICENSE  README.md  pubsub_logger.py  pyproject.toml  quickstart.sh  requirements.txt  run_web.py  system_architecture.md
app/: __init__.py  main.py
app/routes/: __init__.py  api.py  views.py
app/static/css/: styles.css
app/static/js/: app.js
app/templates/: index.html
